# NES_EMULATOR

./: .gitignore  CMakeLists.txt  README.md
include/: debug.h
include/core/: bus.h  cpu.h  opcode.h
include/exception/: cpu_exception.h
include/utils/: hex.h
src/core/: bus.cpp  cpu.cpp  opcode.cpp
tests/: CMakeLists.txt  test_cpu.cpp
